--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="sk" class="scroll-smooth">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <title>Čilejkárska desina – Bežecké podujatie</title>
@@ -81,7 +81,7 @@
                  class="w-12 h-12 sm:w-14 sm:h-14 rounded-full border-3 sm:border-4 border-folk-pink shadow-lg" />
           </div>
           <div class="hidden sm:block">
-            <div class="handwritten-title text-2xl sm:text-3xl text-primary">
+            <div class="handwritten-title text-xl sm:text-2xl lg:text-3xl text-primary">
               Čilejkárska <span class="text-folk-pink">DESINA</span>
             </div>
             <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 </div>
@@ -247,7 +247,7 @@
           2. máj 2026
         </span>
 
-        <h1 class="mt-6 handwritten-title text-5xl sm:text-6xl xl:text-7xl text-white leading-tight">
+        <h1 class="mt-6 handwritten-title text-4xl sm:text-5xl lg:text-6xl xl:text-7xl text-white leading-tight">
           Čilejkárska<br>
           <span class="text-folk-pink">DESINA</span>
         </h1>
@@ -280,7 +280,7 @@
         <div class="hero-poster">
           <img src="cdlogo.jpg" class="hero-logo" alt="Čilejkárska desina logo">
 
-          <div class="mt-6 handwritten-title text-3xl text-white">
+          <div class="mt-6 handwritten-title text-2xl sm:text-3xl text-white">
             Beh v srdci<br>
             <span class="text-folk-pink">Tekovského regiónu</span>
           </div>
@@ -336,7 +336,7 @@
           <span class="material-icons text-folk-pink text-3xl">map</span>
         </div>
         <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-2">Trasa</div>
-        <div class="handwritten-title text-3xl text-white">10 km • 5 km</div>
+        <div class="handwritten-title text-2xl sm:text-3xl text-white">10 km • 5 km</div>
       </div>
 
       <div class="bg-navy border-4 border-folk-purple p-8 text-center shadow-xl">
@@ -344,7 +344,7 @@
           <span class="material-icons text-folk-purple text-3xl">event</span>
         </div>
         <div class="text-xs font-bold text-folk-purple uppercase tracking-wide mb-2">Dátum</div>
-        <div class="handwritten-title text-3xl text-white">2. 5. 2026</div>
+        <div class="handwritten-title text-2xl sm:text-3xl text-white">2. 5. 2026</div>
       </div>
 
       <div class="bg-navy border-4 border-folk-blue p-8 text-center shadow-xl">
@@ -352,7 +352,7 @@
           <span class="material-icons text-folk-blue text-3xl">timer</span>
         </div>
         <div class="text-xs font-bold text-folk-blue uppercase tracking-wide mb-2">Štarty</div>
-        <div class="handwritten-title text-3xl text-white">9:00 • 10:30 • 11:45</div>
+        <div class="handwritten-title text-2xl sm:text-3xl text-white">9:00 • 10:30 • 11:45</div>
         <div class="text-xs text-white/70 font-bold mt-2">deti • 5 km • 10 km</div>
       </div>
     </div>
@@ -378,7 +378,7 @@
       <div class="inline-block px-5 py-2 bg-folk-pink/20 border-2 border-folk-pink text-folk-pink font-bold uppercase tracking-wide mb-4 text-sm">
         O podujatí
       </div>
-      <h2 class="handwritten-title text-5xl sm:text-6xl text-navy mb-6">
+      <h2 class="handwritten-title text-4xl sm:text-5xl lg:text-6xl text-navy mb-6">
         Viac než len <span class="text-folk-pink">beh</span>
       </h2>
       <p class="text-lg text-navy/80 leading-relaxed max-w-3xl mx-auto font-serif">
@@ -442,7 +442,7 @@
       <div class="inline-block px-5 py-2 bg-folk-green/20 border-2 border-folk-green text-folk-green font-bold uppercase tracking-wide mb-4 text-sm">
         Propozície
       </div>
-      <h2 class="handwritten-title text-5xl sm:text-6xl text-navy mb-6">
+      <h2 class="handwritten-title text-4xl sm:text-5xl lg:text-6xl text-navy mb-6">
         Všetko čo <span class="text-folk-pink">potrebujete vedieť</span>
       </h2>
       <p class="text-lg text-navy/80 leading-relaxed max-w-3xl mx-auto font-serif">
@@ -608,7 +608,7 @@
         <div class="w-20 h-20 mx-auto mb-6 bg-folk-pink/20 border-4 border-folk-pink flex items-center justify-center">
           <span class="material-icons text-folk-pink text-4xl">description</span>
         </div>
-        <h3 class="handwritten-title text-3xl text-navy mb-4">Kompletné propozície</h3>
+        <h3 class="handwritten-title text-2xl sm:text-3xl text-navy mb-4">Kompletné propozície</h3>
         <p class="text-navy/70 mb-6 max-w-md">
           Stiahnite si PDF s úplnými propozíciami preteku vrátane všetkých pravidiel a kategórií.
         </p>
@@ -625,49 +625,49 @@
 <div class="folk-wave"></div>
 
 <!-- ====== ROUTE ====== -->
-<section id="route" class="relative py-24 px-6 overflow-hidden">
+<section id="route" class="relative py-16 sm:py-24 px-4 sm:px-6 overflow-hidden">
   <!-- Folklórne pozadie -->
   <div class="folk-pattern-bg absolute inset-0"></div>
 
   <!-- Extra folklórne kvety pre Route sekciu -->
   <div class="absolute inset-0 overflow-hidden pointer-events-none opacity-20">
-    <div class="absolute left-[10%] top-[10%] text-7xl text-folk-pink float-animation">✿</div>
-    <div class="absolute right-[10%] top-[15%] text-6xl text-folk-purple float-animation" style="animation-delay: 1s;">❀</div>
-    <div class="absolute left-[12%] bottom-[20%] text-6xl text-folk-blue float-animation" style="animation-delay: 2s;">✿</div>
-    <div class="absolute right-[12%] bottom-[25%] text-7xl text-folk-green float-animation" style="animation-delay: 3s;">❀</div>
-    <div class="absolute left-[50%] top-[20%] text-5xl text-folk-pink float-animation" style="animation-delay: 1.5s;">✿</div>
+    <div class="absolute left-[10%] top-[10%] text-5xl sm:text-7xl text-folk-pink float-animation">✿</div>
+    <div class="absolute right-[10%] top-[15%] text-5xl sm:text-6xl text-folk-purple float-animation" style="animation-delay: 1s;">❀</div>
+    <div class="absolute left-[12%] bottom-[20%] text-5xl sm:text-6xl text-folk-blue float-animation" style="animation-delay: 2s;">✿</div>
+    <div class="absolute right-[12%] bottom-[25%] text-5xl sm:text-7xl text-folk-green float-animation" style="animation-delay: 3s;">❀</div>
+    <div class="absolute left-[50%] top-[20%] text-4xl sm:text-5xl text-folk-pink float-animation" style="animation-delay: 1.5s;">✿</div>
   </div>
 
   <div class="max-w-5xl mx-auto relative z-10">
-    <div class="text-center mb-12 reveal">
-      <div class="inline-block px-5 py-2 bg-folk-purple/20 border-2 border-folk-purple text-folk-purple font-bold uppercase tracking-wide mb-4 text-sm">
+    <div class="text-center mb-8 sm:mb-12 reveal">
+      <div class="inline-block px-4 sm:px-5 py-2 bg-folk-purple/20 border-2 border-folk-purple text-folk-purple font-bold uppercase tracking-wide mb-4 text-xs sm:text-sm">
         Trasa preteku
       </div>
-      <h2 class="handwritten-title text-5xl sm:text-6xl text-navy mb-6">
+      <h2 class="handwritten-title text-4xl sm:text-5xl lg:text-6xl text-navy mb-4 sm:mb-6 break-words px-4">
         Poznaj svoju <span class="text-folk-pink">trať</span>
       </h2>
     </div>
 
-    <div class="reveal folk-card overflow-hidden shadow-2xl mb-6">
-      <div class="aspect-video">
+    <div class="reveal folk-card overflow-hidden shadow-2xl mb-4 sm:mb-6">
+      <div class="p-4 sm:p-6">
         <!-- MAP HEADER -->
-        <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 mb-4 reveal">
-          <div class="flex items-center gap-3">
-            <div class="w-12 h-12 bg-folk-pink/20 border-3 border-folk-pink flex items-center justify-center">
-              <span class="material-icons text-folk-pink text-2xl">route</span>
+        <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 sm:gap-4 mb-4 reveal">
+          <div class="flex items-center gap-2 sm:gap-3 min-w-0 flex-1">
+            <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-pink/20 border-2 sm:border-3 border-folk-pink flex items-center justify-center flex-shrink-0">
+              <span class="material-icons text-folk-pink text-xl sm:text-2xl">route</span>
             </div>
-            <div>
+            <div class="min-w-0 flex-1">
               <div class="text-xs font-bold uppercase tracking-wide text-folk-purple">
                 Zobrazená trasa
               </div>
-              <div id="routeTitle" class="handwritten-title text-3xl text-navy">
+              <div id="routeTitle" class="handwritten-title text-2xl sm:text-3xl text-navy truncate">
                 10 km – hlavná trať
               </div>
             </div>
           </div>
 
           <!-- SWITCH -->
-          <div class="flex gap-2">
+          <div class="flex gap-2 flex-shrink-0 justify-center sm:justify-end">
             <button
                     id="btn10k"
                     class="route-switch route-switch--active"
@@ -684,29 +684,20 @@
           </div>
         </div>
 
-
-        <div id="leafletMap" class="w-full h-full"></div>
+        <div id="leafletMap" class="w-full h-[300px] sm:h-[400px] lg:h-[520px]"></div>
       </div>
     </div>
 
-  </div>
-
-
-
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
-      <div class="reveal bg-navy border-4 border-folk-pink p-6 shadow-xl text-center">
+    <!-- Info boxy - CENTROVANÉ -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6 max-w-3xl mx-auto">
+      <div class="reveal bg-navy border-3 sm:border-4 border-folk-pink p-4 sm:p-6 shadow-xl text-center">
         <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-2">Povrch</div>
-        <div class="handwritten-title text-2xl text-white">Asfalt / poľné cesty</div>
+        <div class="handwritten-title text-xl sm:text-2xl text-white break-words">Asfalt / poľné cesty</div>
       </div>
 
-      <div class="reveal bg-navy border-4 border-folk-purple p-6 shadow-xl text-center">
-        <div class="text-xs font-bold text-folk-purple uppercase tracking-wide mb-2">Prevýšenie</div>
-        <div class="handwritten-title text-2xl text-white">~ 2 m</div>
-      </div>
-
-      <div class="reveal bg-navy border-4 border-folk-blue p-6 shadow-xl text-center">
+      <div class="reveal bg-navy border-3 sm:border-4 border-folk-blue p-4 sm:p-6 shadow-xl text-center">
         <div class="text-xs font-bold text-folk-blue uppercase tracking-wide mb-2">Občerstvenie</div>
-        <div class="handwritten-title text-2xl text-white">2 stanice</div>
+        <div class="handwritten-title text-xl sm:text-2xl text-white">1 stanica</div>
       </div>
     </div>
   </div>
@@ -734,7 +725,7 @@
       <div class="inline-block px-5 py-2 bg-folk-blue/20 border-2 border-folk-blue text-folk-blue font-bold uppercase tracking-wide mb-4 text-sm">
         Kontakt
       </div>
-      <h2 class="handwritten-title text-5xl sm:text-6xl text-navy mb-6">
+      <h2 class="handwritten-title text-4xl sm:text-5xl lg:text-6xl text-navy mb-6">
         Sme tu pre <span class="text-folk-pink">vás</span>
       </h2>
     </div>
@@ -843,7 +834,7 @@
 <footer class="bg-navy text-white py-12 px-6 border-t-8 border-folk-pink">
   <div class="max-w-5xl mx-auto text-center">
     <img src="cdlogo.jpg" alt="Logo" class="w-20 h-20 mx-auto mb-4 rounded-full border-4 border-folk-pink" />
-    <div class="handwritten-title text-3xl mb-2">Čilejkárska desina</div>
+    <div class="handwritten-title text-2xl sm:text-3xl mb-2">Čilejkárska desina</div>
     <div class="text-sm text-white/70 mb-6 font-bold">Bežecké podujatie • 2. 5. 2026 </div>
     <div class="text-xs text-white/50">
       © 2026 Čilejkárska desina. Všetky práva vyhradené.
