--- a/public/index.html
+++ b/public/index.html
@@ -819,7 +819,7 @@
         Otázky k online registrácii: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="452624362a282c2037246b2e372c29052228242c296b262a28">[email&#160;protected]</a> • Výsledky: kril.sk
       </p>
 
-      <a href="#" class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
+      <a href="https://www.kril.sk/registracia/cilejkarskadesina" class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
         <span>Otvoriť registračný formulár</span>
         <span class="material-icons">arrow_forward</span>
       </a>
