--- a/public/gallery.html
+++ b/public/gallery.html
@@ -13,7 +13,7 @@
     <!-- Fonts / Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Italiana&family:Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Italiana&family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
     <script>
@@ -56,10 +56,10 @@
                              class="w-12 h-12 sm:w-14 sm:h-14 rounded-full border-3 sm:border-4 border-folk-pink shadow-lg" />
                     </div>
                     <div class="hidden sm:block">
-                        <div class="handwritten-title text-2xl sm:text-3xl text-primary">
+                        <div class="handwritten-title text-xl sm:text-2xl lg:text-3xl text-primary">
                             Čilejkárska <span class="text-folk-pink">DESINA</span>
                         </div>
-                        <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026 • Tekov</div>
+                        <div class="text-xs font-bold text-folk-purple uppercase tracking-wider">2.5.2026</div>
                     </div>
                 </a>
 
@@ -123,9 +123,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-pink/20 border-2 border-folk-pink flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-pink text-xl sm:text-2xl">info</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">O pretekoch</div>
-                        <div class="text-xs text-folk-purple">čo vás čaká</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">O pretekoch</div>
+                        <div class="text-xs text-folk-purple truncate">čo vás čaká</div>
                     </div>
                 </a>
 
@@ -133,9 +133,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-purple/20 border-2 border-folk-purple flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-purple text-xl sm:text-2xl">map</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">Trasa</div>
-                        <div class="text-xs text-folk-purple">mapa + parametre</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">Trasa</div>
+                        <div class="text-xs text-folk-purple truncate">mapa + parametre</div>
                     </div>
                 </a>
 
@@ -143,9 +143,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-green/20 border-2 border-folk-green flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-green text-xl sm:text-2xl">description</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">Propozície</div>
-                        <div class="text-xs text-folk-purple">pravidlá + ceny</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">Propozície</div>
+                        <div class="text-xs text-folk-purple truncate">pravidlá + ceny</div>
                     </div>
                 </a>
 
@@ -153,9 +153,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-blue/20 border-2 border-folk-blue flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-blue text-xl sm:text-2xl">call</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">Kontakt</div>
-                        <div class="text-xs text-folk-purple">info + miesto</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">Kontakt</div>
+                        <div class="text-xs text-folk-purple truncate">info + miesto</div>
                     </div>
                 </a>
 
@@ -163,9 +163,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-pink/20 border-2 border-folk-pink flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-pink text-xl sm:text-2xl">how_to_reg</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">Registrácia</div>
-                        <div class="text-xs text-folk-purple">prihlásiť sa</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">Registrácia</div>
+                        <div class="text-xs text-folk-purple truncate">prihlásiť sa</div>
                     </div>
                 </a>
 
@@ -173,9 +173,9 @@
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-folk-blue/20 border-2 border-folk-blue flex items-center justify-center flex-shrink-0">
                         <span class="material-icons text-folk-blue text-xl sm:text-2xl">photo_library</span>
                     </div>
-                    <div class="min-w-0">
-                        <div class="font-bold text-navy text-sm sm:text-base">Galéria</div>
-                        <div class="text-xs text-folk-purple">fotky z podujatia</div>
+                    <div class="min-w-0 flex-1">
+                        <div class="font-bold text-navy text-sm sm:text-base truncate">Galéria</div>
+                        <div class="text-xs text-folk-purple truncate">fotky z podujatia</div>
                     </div>
                 </a>
             </div>
@@ -184,14 +184,14 @@
             <div class="space-y-2 sm:space-y-3">
                 <a href="index.html#registration"
                    class="drawerLink w-full flex items-center justify-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-bold px-4 sm:px-6 py-3 sm:py-4 text-sm sm:text-base border-2 sm:border-3 border-navy shadow-lg transition-all">
-                    <span class="material-icons text-lg sm:text-xl">bolt</span>
-                    <span>Registrovať sa teraz</span>
+                    <span class="material-icons text-lg sm:text-xl flex-shrink-0">bolt</span>
+                    <span class="truncate">Registrovať sa teraz</span>
                 </a>
                 <a href="https://mapy.com/s/necuhuzuge" target="_blank" rel="noopener"
                    class="w-full flex items-center justify-center gap-2 bg-white border-2 sm:border-3 border-navy
                   text-navy font-bold px-4 sm:px-6 py-3 sm:py-4 text-sm sm:text-base hover:bg-folk-cream transition">
-                    <span class="material-icons text-lg sm:text-xl">open_in_new</span>
-                    <span>Otvoriť trasu</span>
+                    <span class="material-icons text-lg sm:text-xl flex-shrink-0">open_in_new</span>
+                    <span class="truncate">Otvoriť trasu</span>
                 </a>
             </div>
         </div>
@@ -199,33 +199,59 @@
 </aside>
 
 <main class="wrap">
-    <h1>Galéria</h1>
-    <p>Tu sa zobrazia fotky z podujatia</p>
+    <div class="text-center mb-12">
+        <div class="inline-block px-5 py-2 bg-folk-pink/20 border-2 border-folk-pink text-folk-pink font-bold uppercase tracking-wide mb-4 text-sm">
+            Fotogaléria
+        </div>
+
+        <h1 class="handwritten-title text-4xl sm:text-5xl lg:text-6xl text-navy mb-6 mt-8 sm:mt-12">
+            Vaše <span class="text-folk-pink">spomienky</span>
+        </h1>
+        <div class="bg-white/90 p-6 rounded-lg shadow-lg max-w-2xl mx-auto">
+            <p class="text-lg text-navy leading-relaxed font-serif mb-4">
+                Tu sa zobrazia <strong>vaše fotografie</strong> z Čilejkárskej desiny.
+            </p>
+            <p class="text-base text-navy/70 leading-relaxed font-serif">
+                Atmosféra podujatia, úsmevy bežcov a nezabudnuteľné momenty zachytené objektívom.
+            </p>
+        </div>
+    </div>
 
     <section class="grid" id="gallery">
         <!-- Galéria sa načíta pomocou JavaScript -->
+        <!-- Ak nie sú žiadne fotky, zobrazí sa táto správa -->
+        <div class="col-span-full text-center py-16">
+            <div class="w-24 h-24 mx-auto mb-6 bg-folk-blue/20 border-4 border-folk-blue rounded-full flex items-center justify-center">
+                <span class="material-icons text-folk-blue text-5xl">photo_camera</span>
+            </div>
+            <p class="text-xl text-navy/70 font-serif mb-2">Fotografie budú pridané po podujatí</p>
+            <p class="text-sm text-navy/50">2. máj 2026</p>
+        </div>
     </section>
 </main>
 
 <div class="lb" id="lightbox" aria-hidden="true" role="dialog" aria-label="Galéria - náhľad">
     <div class="lb__panel" role="document">
         <div class="lb__top">
-            <div class="lb__title" id="lbTitle">Náhľad</div>
-            <button class="lb__btn" id="lbClose" type="button" aria-label="Zavrieť (Esc)">✕ Zavrieť</button>
+
         </div>
 
-        <div class="lb__stage" id="lbStage">
-            <button class="lb__btn lb__nav lb__nav--prev" id="lbPrev" type="button" aria-label="Predchádzajúca (←)">←</button>
-            <img class="lb__img" id="lbImg" alt="">
-            <button class="lb__btn lb__nav lb__nav--next" id="lbNext" type="button" aria-label="Ďalšia (→)">→</button>
-        </div>
 
-        <div class="lb__bottom">
-            <div class="lb__meta" id="lbMeta">1 / 1</div>
-            <div class="lb__hint">Tip: ←/→ prepína, Esc zavrie, klik mimo zavrie</div>
-        </div>
+
+
     </div>
 </div>
+
+<footer class="bg-navy text-white py-8 sm:py-12 px-4 sm:px-6 border-t-6 sm:border-t-8 border-folk-pink mt-16">
+    <div class="max-w-5xl mx-auto text-center">
+        <img src="cdlogo.jpg" alt="Logo" class="w-16 h-16 sm:w-20 sm:h-20 mx-auto mb-3 sm:mb-4 rounded-full border-3 sm:border-4 border-folk-pink" />
+        <div class="handwritten-title text-2xl sm:text-3xl mb-2 break-words">Čilejkárska desina</div>
+        <div class="text-sm text-white/70 mb-4 sm:mb-6 font-bold">Bežecké podujatie • 2. 5. 2026</div>
+        <div class="text-xs text-white/50 break-words px-4">
+            © 2026 Čilejkárska desina. Všetky práva vyhradené.
+        </div>
+    </div>
+</footer>
 
 <script src="script.js"></script>
 
