--- a/public/index.html
+++ b/public/index.html
@@ -612,7 +612,7 @@
         <p class="text-navy/70 mb-6 max-w-md">
           Stiahnite si PDF s úplnými propozíciami preteku vrátane všetkých pravidiel a kategórií.
         </p>
-        <a href="Propozície-behu-ČD-10.pdf" download class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
+        <a href="CD_propozicie.pdf" download class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
           <span class="material-icons">download</span>
           <span>Stiahnuť propozície (PDF)</span>
         </a>
@@ -819,7 +819,7 @@
         Otázky k online registrácii: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="452624362a282c2037246b2e372c29052228242c296b262a28">[email&#160;protected]</a> • Výsledky: kril.sk
       </p>
 
-      <a href="https://www.kril.sk/registracia/cilejkarskadesina" class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
+      <a href="#" class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
         <span>Otvoriť registračný formulár</span>
         <span class="material-icons">arrow_forward</span>
       </a>
