--- a/public/index.html
+++ b/public/index.html
@@ -548,13 +548,28 @@
           </div>
 
           <div class="flex items-start gap-3">
-            <span class="material-icons text-folk-blue mt-0.5">euro</span>
-            <div><strong class="text-white">5 km:</strong> 8 €</div>
+            <span class="material-icons text-folk-blue mt-1 shrink-0">euro</span>
+
+            <div class="text-sm sm:text-base leading-relaxed text-white">
+              <strong>5 km:</strong>
+              <ul class="mt-1 space-y-0.5 list-disc list-inside text-white/90">
+                <li>do 3. 5. 2026: 10 €</li>
+                <li>od 4. 5. do 7. 5. 2026: 12 €</li>
+                <li>na mieste: 15 €</li>
+              </ul>
+            </div>
           </div>
+
 
           <div class="flex items-start gap-3">
             <span class="material-icons text-folk-blue mt-0.5">euro</span>
-            <div><strong class="text-white">10 km:</strong> 12 €</div>
+            <div><strong class="text-white">10 km:</strong>
+              <ul class="mt-1 space-y-0.5 list-disc list-inside text-white/90">
+                <li>do 3. 5. 2026: 13 €</li>
+                <li>od 4. 5. do 7. 5. 2026: 15 €</li>
+                <li>na mieste: 18 €</li>
+              </ul>
+            </div>
           </div>
 
           <div class="text-xs text-white/70 pt-2">
@@ -813,7 +828,9 @@
       </div>
       <h2 class="handwritten-title text-5xl text-navy mb-4">Registrácia</h2>
       <p class="text-navy/70 text-lg mb-8 max-w-lg mx-auto font-serif">
-        Registrácia prebieha online cez KRIL. Online registrácia končí <strong>30. 4. 2026 o 23:59</strong>.
+        Registrácia prebieha online prostredníctvom stránky:
+        https://www.vysledkovyservis.sk
+        Online registrácia končí <strong>7. 5. 2026 o 23:59</strong>.
       </p>
       <p class="text-sm text-navy/60 font-bold mb-8">
         Otázky k online registrácii: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="452624362a282c2037246b2e372c29052228242c296b262a28">[email&#160;protected]</a> • Výsledky: kril.sk
