--- a/public/index.html
+++ b/public/index.html
@@ -753,12 +753,15 @@
           </div>
           <div>
             <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-1">Email</div>
-            <div class="text-lg font-black text-white"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="97f4f8e5e5f2e3e3f8e5e2f9d7f0faf6fefbb9f4f8fa">[email&#160;protected]</a></div>
+            <div class="text-lg font-black text-white break-all">
+              correttorun@gmail.com
+            </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl">
+    <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl">
         <div class="flex items-center gap-6">
           <div class="flex-shrink-0 w-16 h-16 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
             <span class="material-icons text-folk-blue text-3xl">location_on</span>
@@ -833,7 +836,7 @@
         Online registrácia končí <strong>7. 5. 2026 o 23:59</strong>.
       </p>
       <p class="text-sm text-navy/60 font-bold mb-8">
-        Otázky k online registrácii: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="452624362a282c2037246b2e372c29052228242c296b262a28">[email&#160;protected]</a> • Výsledky: kril.sk
+
       </p>
 
       <a href="#" class="inline-flex items-center gap-2 bg-folk-pink hover:bg-folk-purple text-white font-black py-4 px-8 border-3 border-navy shadow-xl transition-all uppercase tracking-wide">
