--- a/public/index.html
+++ b/public/index.html
@@ -753,15 +753,12 @@
           </div>
           <div>
             <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-1">Email</div>
-            <div class="text-lg font-black text-white break-all">
-              correttorun@gmail.com
-            </div>
+            <div class="text-lg font-black text-white">correttorun@gmail.com</div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl">
+      <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl">
         <div class="flex items-center gap-6">
           <div class="flex-shrink-0 w-16 h-16 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
             <span class="material-icons text-folk-blue text-3xl">location_on</span>
