--- a/public/index.html
+++ b/public/index.html
@@ -745,31 +745,40 @@
       </h2>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
-      <div class="reveal bg-navy border-4 border-folk-pink p-8 shadow-xl">
-        <div class="flex items-center gap-6">
-          <div class="flex-shrink-0 w-16 h-16 bg-folk-pink/30 border-3 border-folk-pink flex items-center justify-center">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16 items-stretch">
+      <!-- Email -->
+      <div class="reveal bg-navy border-4 border-folk-pink p-8 shadow-xl h-full">
+        <div class="flex items-center gap-6 min-w-0">
+          <div class="shrink-0 w-16 h-16 bg-folk-pink/30 border-3 border-folk-pink flex items-center justify-center">
             <span class="material-icons text-folk-pink text-3xl">email</span>
           </div>
-          <div>
+
+          <div class="min-w-0">
             <div class="text-xs font-bold text-folk-pink uppercase tracking-wide mb-1">Email</div>
-            <div class="text-lg font-black text-white">correttorun@gmail.com</div>
+            <div class="text-lg sm:text-xl font-black text-white break-words">
+              correttorun@gmail.com
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl">
-        <div class="flex items-center gap-6">
-          <div class="flex-shrink-0 w-16 h-16 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
+      <!-- Location -->
+      <div class="reveal bg-navy border-4 border-folk-blue p-8 shadow-xl h-full">
+        <div class="flex items-center gap-6 min-w-0">
+          <div class="shrink-0 w-16 h-16 bg-folk-blue/30 border-3 border-folk-blue flex items-center justify-center">
             <span class="material-icons text-folk-blue text-3xl">location_on</span>
           </div>
-          <div>
+
+          <div class="min-w-0">
             <div class="text-xs font-bold text-folk-blue uppercase tracking-wide mb-1">Štart / cieľ</div>
-            <div class="text-lg font-black text-white">Kultúrny dom Hronské Kľačany</div>
+            <div class="text-lg sm:text-xl font-black text-white break-words">
+              Kultúrny dom Hronské Kľačany
+            </div>
           </div>
         </div>
       </div>
     </div>
+
 
     <div class="reveal pt-12 border-t-4 border-navy folk-border">
       <p class="text-center text-xs font-bold text-folk-purple uppercase tracking-widest mb-8">
